# pythoncomoncore

a_maze_ing/: Makefile  README.md  a_maze_ing.py  config.txt  exit.txt  mazegen-0.1.0-py3-none-any.whl  paint_maze.txt  pyproject.toml  reqs.txt
a_maze_ing/mazegen/: __init__.py  cell.py  maze_generator.py  parsing.py  utils.py
amazeing/: a_maze_ing.py
flyin/: Makefile  algorithm.py  classes.py  connections.txt  djikstra.py  drones.txt  exceptions.py  flyin.py  main.py  movements.txt  parser.py  pathdijkstrq.txt  paths.txt  requirements.txt  simulation.py  t.txt  test.py  test.txt  todo.txt  zones.txt
flyin/hard/: 02_capacity_hell.txt
python00/: ft_garden_summary.py  ft_seed_inventory.py
python00/__pycache__/: tt.py
python02/ex1/: ft_different_errors.py
python02/ex2/: ft_custom_errors.py
python02/ex3/: ft_finally_block.py
python03/data_quest_tools/: advanced_data_helper.py  data_generator.py  exercise_0_help.py  exercise_1_helper.py
python03/ex0/: ft_command_quest.py
python03/ex1/: ft_score_analytics.py
python03/ex2/: ft_coordinate_system.py
python03/ex3/: ft_achievement_tracker.py
python03/ex4/: ft_inventory_system.py  ft_raise_errors.py
python03/ex5/: ft_data_stream.py  ft_garden_management.py
python06/: ft_sacred_scroll.py
python06/alchemy/: __init__.py  (+1 more)
python08/: .env.example  .gitignore  Intra Projects Python Module 08 Edit.html  oracle.py
python08/ex01/: loading.py  pyproject.toml  requirements.txt
python09/: Intra Projects Python Module 09 Edit.html  space-station.py
python10/: Intra Projects Python Module 10 Edit.html
(+15 files in other folders)
